# solid-tester

./: AudioCdTest.h  CMakeLists.txt  README.md  main.cpp
